--- a/journal.html
+++ b/journal.html
@@ -11,8 +11,17 @@
         <h2>20 Августа, 2012</h2>
         <img src="images/segway2.jpg">
         <p>
-            Итак я уже проехал 1200 миль и побывал в некоторых интересных местах: Вала-вала, штат Вашингтон, Меджик-Сити, штах Айдахо, Баунтифул, штат Юта, Лест Чанс, штат Колорадо, Уай, штат Аризона, Трут-ор-Консекуенсес, штат Нью-Мексико.
+            Итак я уже проехал 1200 миль и побывал в некоторых интересных местах:
         </p>
+        
+        <ol>
+            <li>Вала-вала, штат Вашингтон</li>
+            <li>Меджик-Сити, штах Айдахо</li>
+            <li>Баунтифул, штат Юта</li>
+            <li>Лест Чанс, штат Колорадо</li>
+            <li>Уай, штат Аризона</li>
+            <li>Трут-ор-Консекуенсес, штат Нью-Мексико</li>
+        </ol>
         
         <h2>14 Июля, 2012</h2>
         <p>
