--- a/journal.html
+++ b/journal.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Дневник моих поездок на собственном скутере по США</title>
+        <link type="text/css" rel="stylesheet" href="journal.css"/>
     </head>
     <body>
         <h1>На скутере по США</h1>
